--- a/FileCompressor/FileCompressor.vcxproj
+++ b/FileCompressor/FileCompressor.vcxproj
@@ -130,10 +130,14 @@
     <ClCompile Include="Compressor.cpp" />
     <ClCompile Include="FileCompressor.cpp" />
     <ClCompile Include="FileHandler.cpp" />
+    <ClCompile Include="Node.cpp" />
+    <ClCompile Include="StringUtills.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Compressor.h" />
     <ClInclude Include="FileHandler.h" />
+    <ClInclude Include="Node.h" />
+    <ClInclude Include="StringUtills.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
