--- a/FileCompressor/FileCompressor.vcxproj
+++ b/FileCompressor/FileCompressor.vcxproj
@@ -128,16 +128,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BinaryUtils.cpp" />
     <ClCompile Include="Compressor.cpp" />
-    <ClCompile Include="FileCompressor.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="FileHandler.cpp" />
     <ClCompile Include="HuffmanNode.cpp" />
+    <ClCompile Include="LoadFileHandler.cpp" />
+    <ClCompile Include="SaveFileHandler.cpp" />
     <ClCompile Include="StringUtills.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BinaryUtils.h" />
     <ClInclude Include="Compressor.h" />
     <ClInclude Include="FileHandler.h" />
     <ClInclude Include="HuffmanNode.h" />
+    <ClInclude Include="LoadFileHandler.h" />
+    <ClInclude Include="SaveFileHandler.h" />
     <ClInclude Include="StringUtills.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
